test: remove deprecated tests